# data_bases

./: .gitignore  README.md  pyproject.toml
src/: db_creator.py  db_manager.py  main.py  vacancies.py
